Updated the sign in page to fix spacing issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,7 +28,7 @@ p {
 }
 
 #container {
- position: absolute; 
+ position: relative; 
  top: 50%; 
  left: 50%; 
  transform: translate(-50%, -50%);
@@ -37,7 +37,7 @@ p {
 #card {
  padding: 30px; 
  width: 70%; 
- position: absolute; 
+ position: relative; 
  top: 50%; 
  left: 50%; 
  transform: translate(-50%, -50%); 
@@ -58,6 +58,12 @@ p {
 @media screen and (max-width: 600px) {
   #welcome  {
     font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  label  {
+    display: none;
   }
 }
 
